--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./css/index.css">
 
-    <title>유아 교육 업계 1위, KIDKIDS</title>
+    <title>유아 교육 1위, KIDKIDS</title>
 </head>
 <body>
 <div id="root">
@@ -42,7 +42,7 @@
                 <img class="cba_img" src="./img/background1.jpg" alt="학습장 배경">
                 <div class="cba_content">
                     <div class="headline_contain">
-                        <h2>국내 유아 교육 업계 1위,</h2>
+                        <h2>국내 유아 교육 1위,</h2>
                         <h1>KIDKIDS</h1>
                     </div>
                 </div>
