--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./css/styles.css" />
+    <script src="./js/index.js" defer></script>
 
     <title>유아 교육 업계 1위, KIDKIDS</title>
 </head>
@@ -97,6 +99,64 @@
                 </div>
             </div>
         </section>
+
+        <section class="section_end">
+            <div class="section_end_inner">
+                <h1>키드키즈 회원 어디까지 알고있니?</h1>
+                <h2>키드키즈 유료회원 멤버십의 모든 것을 소개합니다!</h2>
+            </div>
+        </section>
+
+  <section class="section_membership">
+        <h1>가성비 갑 회원제 추천! 🎁정회원🎁</h1>
+        <div class="wrap_intro">
+            <div class="img_sub js-scroll fade-in-bottom">
+                <img class="logo" src="./img/kini.gif" alt="찜">
+            </div>
+            <div class="tabs js-scroll slide-right">
+                <menu>
+                    <button class="tab-btn active" data-content="🎟️ 정회원 자료 제공 | 🎶 동요 스트리밍 무제한 | 🛍️ 키드키즈몰 3% 적립 | 🎓 온라인 강좌 50% 할인 (제휴 강좌 제외) | 💰 1~3개월: 8,800원, 4~12개월: 5,500원, 13개월: 4,400원">월 구독</button>
+<button class="tab-btn" data-content="🎟️ 정회원 자료 제공 | 🎶 동요 스트리밍 무제한 + 💎 동요 4,000 캐시 | 🛍️ 키드키즈몰 3% 적립 | 🎓 온라인 강좌 50% 할인 (제휴 강좌 제외) | 💰 39,000원">6개월 구독</button>
+<button class="tab-btn" data-content="🎟️ 정회원 자료 제공 | 🎶 동요 스트리밍 무제한 + 💎 동요 10,000 캐시 | 🛍️ 키드키즈몰 3% 적립 | 🎓 온라인 강좌 50% 할인 (제휴 강좌 제외) | 💰 54,000원">12개월 구독</button>
+                </menu>
+                <div class="tab-content"></div>
+            </div>
+        </div>
+    </section>
+
+<section class="section_membership">
+    <h1>든든한 수업 준비 파트너, ❤️멀티누리회원❤️</h1>
+    <div class="wrap_intro">
+        <div class="img_sub js-scroll fade-in-bottom">
+            <img class="logo" src="./img/teepa.gif" alt="찜">
+        </div>
+        <div class="tabs js-scroll slide-right">
+            <menu>
+                <button class="tab-btn active" data-content="📚 멀티놀이자료 + 정회원자료 | 🎶 동요 스트리밍 무제한 | 🛍️ 키드키즈몰 5% 적립 | 🎓 온라인 강좌 무료 (제휴 강좌 제외) | 💰 1~3개월: 20,000원, 4~12개월: 17,000원, 13개월: 15,000원">월 구독</button>
+                <button class="tab-btn" data-content="📚 멀티 + 정회원 자료 | 🎶 동요 스트리밍 무제한 + 💎 동요 6,000 캐시 | 🛍️ 키드키즈몰 5% 적립 + 🚚 키드키즈몰 무료배송 | 🎓 온라인 강좌 무료 (제휴 강좌 제외) | 💰 140,000원">6개월 구독</button>
+                <button class="tab-btn" data-content="📚 멀티 + 정회원 자료 | 🎶 동요 스트리밍 무제한 | 🛍️ 키드키즈몰 5% 적립 + 🚚 키드키즈몰 무료배송 | 🎓 온라인 강좌 무료 (제휴 강좌 제외) | 💰 240,000원">12개월 구독</button>
+            </menu>
+            <div class="tab-content"></div>
+        </div>
+    </div>
+</section>
+
+<section class="section_membership">
+    <h1>수업, 원운영 모두 OK! 🎓매거진멤버🎓</h1>
+    <div class="wrap_intro">
+        <div class="img_sub js-scroll fade-in-bottom">
+            <img class="logo" src="./img/hapa.gif" alt="찜">
+        </div>
+        <div class="tabs js-scroll slide-right">
+            <menu>
+                <button class="tab-btn active" data-content="📚 멀티 1년 + 📰 월간유아 1년 + 🆔 멀티아이디 1개 추가 | 💰 717,600원 ➝ 260,000원">매거진 패키지 1</button>
+                <button class="tab-btn" data-content="📚 멀티 1년 + 📰 월간유아 1년 + 🎁 쇼핑지원금 3만원 | 💰 477,600원 ➝ 260,000원">매거진 패키지 2</button>
+            </menu>
+            <div class="tab-content"></div>
+        </div>
+    </div>
+</section>
+
 
         <section class="section_end">
             <div class="section_end_inner">
