--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
 </head>
 <body>
     <div class="header">
-        <h1>🎮 이벤트 게임 프로토타입</h1>
-        <p>이벤트 페이지에 활용 가능한 게임 프로토타입</p>
+        <h1>🎮 이벤트 게임 프로토타입 - EK Kidkids</h1>
+        <p>본 콘텐츠의 저작권은 이케이(주)에 있으며 무단 복제 및 배포를 금합니다.</p>
     </div>
 
     <div class="games-container">
@@ -379,3 +379,4 @@
     </script>
 </body>
 </html>
+
